# StreamPush

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/superlearn/streampush/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/superlearn/streampush/: LivePusher.java  MainActivity.java
app/src/main/java/com/superlearn/streampush/meida/: AudioChannel.java  CameraHelper.java  VideoChannel.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/superlearn/streampush/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
